8211925: Remove jdk.internal.clang from list of upgradeable modules
Reviewed-by: sundar